--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>George Powell</title>
+	<title>George Powell, local</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
 
 <body>
-
-	<h1>Good morning George :)</h1>
+	<h1>
+		Good 
+		<span id="mor">morning,</span>
+		<span id="aft">afternoon,</span>
+		<span id="eve">evening,</span>
+		<span id="nig">night,</span> George
+	</h1>
+	
 	<script src="js/scripts.js"></script>
 	
 </body>
