--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>George Powell, local</title>
+	<title>George Powell</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
@@ -17,7 +17,7 @@
 		<span id="eve">evening,</span>
 		<span id="nig">night,</span> George
 	</h1>
-	
+
 	<script src="js/scripts.js"></script>
 	
 </body>
