--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>George Powell</title>
+	<title>George Powell, local</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
@@ -19,6 +19,34 @@
 	</h1>
 
 	<script src="js/scripts.js"></script>
+
+	<script>
+		//javascript file for powellgatwit.github.io
+
+var d = new Date();
+var h = d.getHours();
+
+//between sunrise and 12pm, morning
+
+function greeting() {
+    //between sunrise and 12pm, morning
+    if (h > 7 && h < 12) {
+        document.getElementById("mor").style.display = "inline";
+    } else if (h >= 12 && h < 19) {
+        document.getElementById("aft").style.display = "inline";
+    } else if (h >= 19 && h < 24) {
+        document.getElementById("eve").style.display = "inline";
+    } else {
+        document.getElementById("nig").style.display = "inline";
+    }
+}
+
+function run() {
+    greeting();
+}
+
+window.onload = run();
+	</script>
 	
 </body>
 </html>
