--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
 </head>
 
 <body>
-	<h1>
-		Good 
-		<span id="mor">morning,</span>
-		<span id="aft">afternoon,</span>
-		<span id="eve">evening,</span>
-		<span id="nig">night,</span> George
-	</h1>
+	
+	<!-- Header -->
+	<div id="header">
+		<h1>
+			Good 
+			<span id="mor">morning,</span>
+			<span id="aft">afternoon,</span>
+			<span id="eve">evening,</span>
+			<span id="nig">night,</span> George
+		</h1>
+	
+	</div>
+	
+	<!-- Sections -->
+	<div id="sections">
+		<!-- -->
+	</div>
 
 	<script src="js/scripts.js"></script>
-	<script>window.onload = run();</script>
 	
 </body>
 </html>
