improved styling, added blinking cursor

--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>George Powell</title>
+	<title>GHP • Homepage</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
 
 <body>
-	
 	<!-- Header -->
 	<div id="header">
 		<h1>
-			Good 
-			<span id="mor">morning,</span>
-			<span id="aft">afternoon,</span>
-			<span id="eve">evening,</span>
-			<span id="nig">night,</span> George
+			<span id="mor">Good morning, George!<span class="blinking-cursor">|</span></span>
+			<span id="aft">Good afternoon, George.<span class="blinking-cursor">|</span></span>
+			<span id="eve">Good evening, George.<span class="blinking-cursor">|</span></span>
+			<span id="nig">Good night, George.<span class="blinking-cursor">|</span></span>
 		</h1>
 	
 	</div>
 	
 	<!-- Sections -->
-	<div id="sections">
-		<!-- -->
+	<div id="content">
+		
 	</div>
 
 	<script src="js/scripts.js"></script>
