added links, styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>GHP • Homepage</title>
+	<title>GHP•Homepage</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
@@ -23,7 +23,20 @@
 	
 	<!-- Sections -->
 	<div id="content">
-		
+		<!-- school, communication, work, etc. -->
+		<a href="https://wentworth.brightspace.com/d2l/home" target="_blank">brightspace</a>
+		<br>
+		<a href="https://drive.google.com/drive/u/0/my-drive" target="_blank">google drive</a>
+		<br>
+		<a href="https://webwork.wit.edu/webwork2/MATH2100-Summer2021-Shah/" target="_blank">prob & stats</a>
+		<br>
+		<a href="https://verified.capitalone.com/auth/signin" target="_blank">capital one</a>
+		<br>
+		<a href="https://github.com/powellgatwit" target="_blank">github</a>
+		<br>
+		<a href="https://selfservice.wit.edu/" target="_blank">leopardweb</a>
+		<br>
+		<a href="https://keep.google.com/u/0/" target="_blank">google keep</a>
 	</div>
 
 	<script src="js/scripts.js"></script>
