added fidelity link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<br>
 		<a href="https://verified.capitalone.com/auth/signin" target="_blank">capital one</a>
 		<br>
+		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary">fidelity</a>
+		<br>
 		<a href="https://github.com/powellgatwit" target="_blank">github</a>
 		<br>
 		<a href="https://selfservice.wit.edu/" target="_blank">leopardweb</a>
