--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br>
 		<a href="https://verified.capitalone.com/auth/signin" target="_blank">capital one</a>
 		<br>
-		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary">fidelity</a>
+		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary" target="_blank">fidelity</a>
 		<br>
 		<a href="https://github.com/powellgatwit" target="_blank">github</a>
 		<br>
