removed _blank targets

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 	<!-- Sections -->
 	<div id="content">
 		<!-- school, communication, work, etc. -->
-		<a href="https://wentworth.brightspace.com/d2l/home" target="_blank">brightspace</a>
+		<a href="https://wentworth.brightspace.com/d2l/home">brightspace</a>
 		<br>
-		<a href="https://drive.google.com/drive/u/0/my-drive" target="_blank">google drive</a>
+		<a href="https://drive.google.com/drive/u/0/my-drive">google drive</a>
 		<br>
-		<a href="https://webwork.wit.edu/webwork2/MATH2100-Summer2021-Shah/" target="_blank">prob & stats</a>
+		<a href="https://webwork.wit.edu/webwork2/MATH2100-Summer2021-Shah/">prob & stats</a>
 		<br>
-		<a href="https://verified.capitalone.com/auth/signin" target="_blank">capital one</a>
+		<a href="https://verified.capitalone.com/auth/signin">capital one</a>
 		<br>
-		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary" target="_blank">fidelity</a>
+		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary">fidelity</a>
 		<br>
-		<a href="https://github.com/powellgatwit" target="_blank">github</a>
+		<a href="https://github.com/powellgatwit">github</a>
 		<br>
-		<a href="https://selfservice.wit.edu/" target="_blank">leopardweb</a>
+		<a href="https://selfservice.wit.edu/">leopardweb</a>
 		<br>
-		<a href="https://keep.google.com/u/0/" target="_blank">google keep</a>
+		<a href="https://keep.google.com/u/0/">google keep</a>
 	</div>
 
 	<script src="js/scripts.js"></script>
