--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<!-- school, communication, work, etc. -->
 		<a href="https://wentworth.brightspace.com/d2l/home">brightspace</a>
 		<br>
-		<a href="https://drive.google.com/drive/u/0/my-drive">google drive</a>
+		<a href="https://drive.google.com/drive/u/0/my-drive">google drive</a> &bull;
+		<a href="https://drive.google.com/drive/u/2/my-drive">wit</a> &bull;
+		<a href="https://drive.google.com/drive/u/1/my-drive">ocf</a>
 		<br>
 		<a href="https://webwork.wit.edu/webwork2/MATH2100-Summer2021-Shah/">prob & stats</a>
 		<br>
