Added copyright notice

--- a/404.html
+++ b/404.html
@@ -21,6 +21,10 @@
 		<span id="nig"></span>
     </div>
 
+    <footer>
+		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
+	</footer>
+
     <script src="js/scripts.js"></script>
 
 </body>
