--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 		<a href="https://keep.google.com/u/0/">google keep</a>
 	</div>
 
+	<footer>
+		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
+	</footer>
+
 	<script src="js/scripts.js"></script>
 	
 </body>
