Created second page, tweaked styling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<!-- Header -->
 	<div id="header">
 		<h1>
-			<span id="mor">Good morning, George!<span class="blinking-cursor">|</span></span>
-			<span id="aft">Good afternoon, George.<span class="blinking-cursor">|</span></span>
-			<span id="eve">Good evening, George.<span class="blinking-cursor">|</span></span>
-			<span id="nig">Good night, George.<span class="blinking-cursor">|</span></span>
+			<span id="mor">Good morning, George!<span class="blinking-cursor">&VerticalLine;</span></span>
+			<span id="aft">Good afternoon, George.<span class="blinking-cursor">&VerticalLine;</span></span>
+			<span id="eve">Good evening, George.<span class="blinking-cursor">&VerticalLine;</span></span>
+			<span id="nig">Good night, George.<span class="blinking-cursor">&VerticalLine;</span></span>
 		</h1>
 	
 	</div>
@@ -48,6 +48,7 @@
 	</footer>
 
 	<script src="js/scripts.js"></script>
+	<script>greeting();</script>
 	
 </body>
 </html>
