--- a/homepage.html
+++ b/homepage.html
@@ -4,22 +4,33 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>Page not found</title>
+	<title>George Powell</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
+
 <body>
-    <div id="header">
+	<!-- Header -->
+	<div id="header">
 		<h1>
-            The page you requested could not be found.<span class="blinking-cursor">|</span>
-        </h1>
-        
+			<span id="name"></span><span class="blinking-cursor">_</span>
+		</h1>
+	
+	</div>
+	
+	<!-- Sections -->
+	<div id="menu">
+        <a>about me</a> &bull;
+        <a>contact</a> &bull;
+        <a>resume</a>
     </div>
 
-    <footer>
+	<footer>
 		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
 	</footer>
 
-    <script src="js/scripts.js"></script>
-
+	<script src="js/scripts.js"></script>
+    <script>typewriter();</script>
+	
 </body>
+</html>
