--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<title>Page not found</title>
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/all.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
 <body>
-    <div id="header">
+    <div id="title">
 		<h1>
             The page you requested could not be found.<span class="blinking-cursor">|</span>
         </h1>
