--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>GHP•Homepage</title>
-	<link rel="stylesheet" href="css/main.css" />
+	<title>George Powell</title>
+	<link rel="stylesheet" href="css/all.css" />
+	<link rel="stylesheet" href="css/index.css" />
 	<link rel="icon" href="images/favicon.png" />
 </head>
 
@@ -13,42 +14,23 @@
 	<!-- Header -->
 	<div id="header">
 		<h1>
-			<span id="mor">Good morning, George!<span class="blinking-cursor">&VerticalLine;</span></span>
-			<span id="aft">Good afternoon, George.<span class="blinking-cursor">&VerticalLine;</span></span>
-			<span id="eve">Good evening, George.<span class="blinking-cursor">&VerticalLine;</span></span>
-			<span id="nig">Good night, George.<span class="blinking-cursor">&VerticalLine;</span></span>
+			<span id="name"></span><span class="blinking-cursor">_</span>
 		</h1>
-	
+        <div id="menu">
+            <a>about me</a> &bull;
+            <a>contact</a> &bull;
+            <a>resume</a>
+        </div>
 	</div>
 	
 	<!-- Sections -->
-	<div id="content">
-		<!-- school, communication, work, etc. -->
-		<a href="https://wentworth.brightspace.com/d2l/home">brightspace</a>
-		<br>
-		<a href="https://drive.google.com/drive/u/0/my-drive">google drive</a> &bull;
-		<a href="https://drive.google.com/drive/u/2/my-drive">wit</a> &bull;
-		<a href="https://drive.google.com/drive/u/1/my-drive">ocf</a>
-		<br>
-		<a href="https://webwork.wit.edu/webwork2/MATH2100-Summer2021-Shah/">prob & stats</a>
-		<br>
-		<a href="https://verified.capitalone.com/auth/signin">capital one</a>
-		<br>
-		<a href="https://oltx.fidelity.com/ftgw/fbc/oftop/portfolio#summary">fidelity</a>
-		<br>
-		<a href="https://github.com/powellgatwit">github</a>
-		<br>
-		<a href="https://selfservice.wit.edu/">leopardweb</a>
-		<br>
-		<a href="https://keep.google.com/u/0/">google keep</a>
-	</div>
 
 	<footer>
 		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
 	</footer>
 
 	<script src="js/scripts.js"></script>
-	<script>greeting();</script>
+    <script>typewriter();</script>
 	
 </body>
 </html>
