Planned and implemented general design changes

--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@
 		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
 	</footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="js/all.js"></script>
 
 </body>
