--- a/links.html
+++ b/links.html
@@ -48,8 +48,8 @@
 		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
 	</footer>
 
-	<script src="js/scripts.js"></script>
-	<script>greeting();</script>
+	<script src="js/all.js"></script>
+	<script src="js/links.js"></script>
 	
 </body>
 </html>
