--- a/index.html
+++ b/index.html
@@ -24,27 +24,34 @@
 	</div>
 	
 	<!-- Sections -->
+	<section id="me">
+		<img id="top" src="media/me3.jpg" />
+		<img id="bot" src="media/me4.jpg" />
+	</section>
+	
 	<section id="content">
 		<div id="subtext">
-			&#9660; Boston, MA <br>(This site is scheduled to be finished on June 24th, 2021.)<hr>
+			Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?<br>
+			<!--(This site is scheduled to be finished on June 24th, 2021.)-->
+			<hr>
 		</div>
 
 		<div id="about">
-			Hello &dash; My name is George, and I'm a junior at Wentworth Institute of Technology studying Computer Science. 
+			Hi! My name is George, and I'm a junior at Wentworth Institute of Technology. I'm studying Computer Science with a minor in Writing, Editing, and Publishing. 
 			<br><br>
 			I'm passionate about learning, and I love injecting others with enthusiasm.
 			<br><br>
-			At the moment, I work with Orthodox Christian Fellowship on the Student Leadership Board, and I'm the current president of the WIT Chess Club.
+			At the moment, I work with <a href="http://ocf.net"><u>Orthodox Christian Fellowship</u></a> on the Student Leadership Board. I'm also the current president of the WIT Chess Club.
 		</div>
 
 		<div id="contact">
 			Feel free to contact me on:
 			<ul>
 				<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a></li>
-				<li>email: <a href="mailto:powellg@github.io" target="_blank">powellg@wit.edu</a></li>
+				<li><a>email: powellg@wit.edu</a></li>
 				<li><a>discord: george#4665</a></li>
 			</ul>
-			Other links:
+			Other links
 			<ul>
 				<li><a href="https://github.com/powellgatwit" target="_blank">GitHub</a></li>
 				<li><a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a></li>
@@ -53,7 +60,7 @@
 		</div>
 
 		<div id="resume">
-			A .pdf of my resume can be viewed here.<br>
+			A .pdf of my resume can be viewed here.<br><br>
 			<a>View my resume</a>
 		</div>
 	</section>
