Basic mobile formatting

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</div>
 	
 	<!-- Sections -->
+	<!-- Picture -->
 	<section id="me">
 		<img id="top" src="media/me3.jpg" />
 		<img id="bot" src="media/me4.jpg" />
@@ -71,6 +72,7 @@
 
 	<script src="js/all.js"></script>
 	<script src="js/index.js"></script>
+	<script>document.body.style.backgroundColor = "#1D1D1D"</script>
 	
 </body>
 </html>
