Fixed link colors and attempted footer fix

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 		</div>
 
 		<div id="about">
+			<br>
 			Hi! My name is George, and I'm a junior at Wentworth Institute of Technology. I'm studying Computer Science with a minor in Writing, Editing, and Publishing. 
 			<br><br>
 			I'm passionate about learning, and I love injecting others with enthusiasm.
 			<br><br>
-			At the moment, I work with <a href="http://ocf.net"><u>Orthodox Christian Fellowship</u></a> on the Student Leadership Board. I'm also the current president of the WIT Chess Club.
+			At the moment, I work with <a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a> on the Student Leadership Board. I'm also the current president of the WIT Chess Club.
 		</div>
 
 		<div id="contact">
