Fixed footer, updated about

--- a/index.html
+++ b/index.html
@@ -38,12 +38,21 @@
 		</div>
 
 		<div id="about">
-			<br>
-			Hi! My name is George, and I'm a junior at Wentworth Institute of Technology. I'm studying Computer Science with a minor in Writing, Editing, and Publishing. 
-			<br><br>
-			I'm passionate about learning, and I love injecting others with enthusiasm.
-			<br><br>
-			At the moment, I work with <a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a> on the Student Leadership Board. I'm also the current president of the WIT Chess Club.
+			<!-- what am I doing -->
+			<p>
+			Hi! My name is George, and I'm a junior at Wentworth Institute of Technology. 
+			I'm studying Computer Science with a minor in Writing, Editing, and Publishing. 
+			</p>
+			<!-- what motivates me-->
+			<p>
+			I am an enthusiastic learner. I love to make people laugh. Reading is one of my greatest hobbies.
+			</p>
+			<!-- where do I wanna go -->
+			<p>
+			At the moment, I work with <a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a>
+			 on the Student Leadership Board. 
+			I'm also the current president of the WIT Chess Club.
+			</p>
 		</div>
 
 		<div id="contact">
@@ -62,7 +71,7 @@
 		</div>
 
 		<div id="resume">
-			A .pdf of my resume can be viewed here.<br><br>
+			<p>Thank you for viewing my resume. A PDF can be viewed at the link below:</p>
 			<a>View my resume</a>
 		</div>
 	</section>
