--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		
         <div id="menu">
 			<div id="subtext">
-				Boston, Massachusetts ➜ Houston, Texas?<span id="location"></span><!--Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?-->
+				Boston, Massachusetts &#10140; Houston, Texas?<span id="location"></span>
+				<!--Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?-->
 			</div>
 			<hr>
             <a id="a" onclick="menu('about', 'a')">about me</a> &nbsp;&bull;&nbsp;
@@ -69,8 +70,8 @@
 			Feel free to contact me on:
 			<ul>
 				<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a></li>
-				<li><a>email: powellg@wit.edu</a></li>
-				<li><a>discord: george#4665</a></li>
+				<li>email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a></li>
+				<li>discord: <span style="background-color: #444444;">george#4665</span></li>
 			</ul>
 			Other links
 			<ul>
@@ -81,8 +82,11 @@
 		</div>
 
 		<div id="resume">
+			<p>Thank you for your interest in my resume. It will be uploaded soon.</p>
+			<!--
 			<p>Thank you for viewing my resume. A PDF can be viewed at the link below:</p>
 			<a>View my resume</a>
+			-->
 		</div>
 	</section>
 
