--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
 		</div>
 
 		<div id="resume">
-			<p>Thank you for your interest in my resume. It will be uploaded soon.</p>
-			<!--
+			
 			<p>Thank you for viewing my resume. A PDF can be viewed at the link below:</p>
-			<a>View my resume</a>
-			-->
+			<a href="media/George Powell - Resume.pdf">View my resume</a>
+			
 		</div>
 	</section>
 
