updated content and styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
         <div id="menu">
 			<div id="subtext">
-				Boston, Massachusetts &#10140; Houston, Texas?<span id="location"></span>
+				<!--Boston, Massachusetts &#10140; Houston, Texas<span id="location"></span>-->
 				<!--Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?-->
 			</div>
 			<hr>
@@ -36,49 +36,75 @@
 	
 	<section id="content">
 		<div id="landing">
-			<!--<p><i>
-				George Powell, CS Student<br>
+			<p><i>
 				Wentworth Institute of Technology<br>
-				Boston, MA
+				B.S. in Computer Science<br>
+				Expected Graduation: Aug. 2023<br>
+				<a href="mailto:powellg@wit.edu" target="_blank">powellg@wit.edu</a>
 			</i></p>
-			<a href="mailto:powellg@wit.edu" target="_blank">powellg@wit.edu</a><br>
+			<!--<a href="mailto:powellg@wit.edu" target="_blank">powellg@wit.edu</a><br>
 			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
 			<a href="https://github.com/powellgatwit" target="_blank">GitHub</a>-->
 		</div>
 
 		<div id="about">
-			<!--<img id="me" src="media/georgemountain.jpg" />-->
-			<!-- what am I doing -->
+			<!-- professional qualifications-->
+			<!-- career aspirations -->
 			<p>
-				Hi! My name is George, and I'm a junior at Wentworth Institute of Technology. 
-				I'm studying <u>Computer Science</u> with a minor in <u>Writing, Editing, and Publishing.</u></p> 
+				My name is George, 
+				and I'm a Computer Science student 
+				at Wentworth Institute of Technology.
+				I'm seeking co-op employment for the spring of 2022
+				in Houston, TX.
 			</p>
-			<!-- what motivates me-->
-			<!-- career -->
 			<p>
-				I'm an enthusiastic learner, and currently applying for Computer Science-related internships or co-ops for the Spring 2022 semester!
+				
 			</p>
-			<!-- where do I wanna go -->
+			<!-- experience -->
 			<p>
-				At the moment, I work with <a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a> 
-				on the Student Leadership Board, and I'm the president of the WIT Chess Club.
+				I currently work with 
+				<a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a> 
+				on their Student Leadership Board. 
+				I also serve as the president of 
+				the Wentworth Chess Club.
 			</p>
-			
+			<!-- interests -->
+			<hr>
+			<p>
+				I'm currently reading <i>Meditations</i> by Marcus Aurelius. 
+				I recently finished <i>A Game of Thrones</i> by George R. R. Martin.
+				A book I enjoyed reading this year was <i>A Man Called Ove</i> 
+				by Fredrik Backman.
+			</p>
 		</div>
 
+		<!--<div id="projects">
+			
+		</div>-->
+
 		<div id="contact">
-			Feel free to contact me on:
+			<!-- formatted list version (bad css)
 			<ul>
-				<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a></li>
+				<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">linkedIn</a></li>
 				<li>email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a></li>
 				<li>discord: <span style="background-color: #444444;">george#4665</span></li>
 			</ul>
-			Other links
+			<hr>
 			<ul>
-				<li><a href="https://github.com/powellgatwit" target="_blank">GitHub</a></li>
-				<li><a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a></li>
+				<li><a href="https://github.com/powellgatwit" target="_blank">github</a></li>
+				<li><a href="https://www.chess.com/member/egglemonsoup" target="_blank">chess.com</a></li>
+				<li><a href="https://lichess.org/@/powellgatwit" target="_blank">lichess.org</a></li>
 				<li><a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">goodreads</a></li>
-			</ul>
+			</ul> -->
+			email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
+			discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br>
+			<hr>
+			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>,
+			<a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
+			<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a>,
+			<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
+			<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><!--,
+			<a href="	https://medium.com/@gghp" target="_blank">Medium</a>-->
 		</div>
 
 		<div id="resume">
@@ -90,7 +116,7 @@
 	</section>
 
 	<footer>
-		Designed and built by George Powell. <span id="copyr">&copy; </span><span id="copyyear"></span>
+		Designed and built by George Powell. <span id="copyr">&copy;</span><span id="copyyear"></span>
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
