--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<!-- interests -->
 			<hr>
 			<p>
-				I'm currently reading <i>Meditations</i> by Marcus Aurelius. 
+				I'm currently reading <i>In Praise of Slowness</i> by Carl Honore. 
 				I recently finished <i>A Game of Thrones</i> by George R. R. Martin.
 				A book I enjoyed reading this year was <i>A Man Called Ove</i> 
 				by Fredrik Backman.
@@ -104,7 +104,7 @@
 			<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a>,
 			<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
 			<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><!--,
-			<a href="	https://medium.com/@gghp" target="_blank">Medium</a>-->
+			<a href="https://medium.com/@gghp" target="_blank">Medium</a>-->
 		</div>
 
 		<div id="resume">
