--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<div id="resume">
 			
 			<p>Thank you for viewing my resume. A PDF can be viewed at the link below:</p>
-			<a href="media/George Powell - Resume.pdf">View my resume</a>
+			<a href="media/George Powell - Resume.pdf" target="_blank">View my resume</a>
 			
 		</div>
 	</section>
