Refreshed information and format

--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
 		<h1>
 			<span id="name"></span><span class="blinking-cursor">_</span>
 		</h1>
-		
+
         <div id="menu">
 			<div id="subtext">
 				<!--Boston, Massachusetts &#10140; Houston, Texas<span id="location"></span>-->
 				<!--Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?-->
 			</div>
 			<hr>
-            <a id="a" onclick="menu('about', 'a')">about me</a> &nbsp;&bull;&nbsp;
-            <a id="b" onclick="menu('contact', 'b')">contact</a> &nbsp;&bull;&nbsp;
-            <a id="c" onclick="menu('resume', 'c')">resume</a>
+						<a class="nav" id="h" onclick="menu('home', 'h')">home</a> &nbsp;&bull;&nbsp;
+            <a class="nav" id="a" onclick="menu('about', 'a')">about me</a> &nbsp;&bull;&nbsp;
+            <a class="nav" id="b" onclick="menu('contact', 'b')">contact</a> &nbsp;&bull;&nbsp;
+            <a class="nav" id="c" onclick="menu('resume', 'c')">resume</a>
 			<hr>
         </div>
-		
+
 	</div>
-	
+
 	<!-- Sections -->
 	<!-- Picture -->
-	
+
 	<section id="content">
-		<div id="landing">
+		<div id="home">
 			<p><i>
 				Wentworth Institute of Technology<br>
 				B.S. in Computer Science<br>
@@ -51,35 +52,36 @@
 			<!-- professional qualifications-->
 			<!-- career aspirations -->
 			<p>
-				My name is George, 
-				and I'm a Computer Science student 
+				My name is George,
+				and I'm a Computer Science student
 				at Wentworth Institute of Technology.
-				I'm seeking co-op employment for the spring of 2022
-				in Houston, TX.
+				I'm currently a Software Engineer Intern at SolBid, Inc.
 			</p>
 			<p>
-				
+
 			</p>
 			<!-- experience -->
 			<p>
-				I currently work with 
-				<a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a> 
-				on their Student Leadership Board. 
-				I also serve as the president of 
+				I currently work with
+				<a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a>
+				on their Student Leadership Board.
+				I also serve as the president of
 				the Wentworth Chess Club.
 			</p>
 			<!-- interests -->
 			<hr>
 			<p>
-				I'm currently reading <i>In Praise of Slowness</i> by Carl Honore. 
-				I recently finished <i>A Game of Thrones</i> by George R. R. Martin.
-				A book I enjoyed reading this year was <i>A Man Called Ove</i> 
-				by Fredrik Backman.
+				I'm currently reading
+				<i>In Praise of Slowness</i> by Carl Honore.
+				I recently finished
+				<i>A Game of Thrones</i> by George R. R. Martin.
+				A book I enjoyed reading this year was
+				<i>A Man Called Ove</i> by Fredrik Backman.
 			</p>
 		</div>
 
 		<!--<div id="projects">
-			
+
 		</div>-->
 
 		<div id="contact">
@@ -98,20 +100,20 @@
 			</ul> -->
 			email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
 			discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br>
-			<hr>
-			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>,
+
+			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
 			<a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
-			<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a>,
+			<!-- <a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a>,-->
 			<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
 			<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><!--,
 			<a href="https://medium.com/@gghp" target="_blank">Medium</a>-->
 		</div>
 
 		<div id="resume">
-			
-			<p>Thank you for viewing my resume. A PDF can be viewed at the link below:</p>
-			<a href="media/George Powell - Resume.pdf" target="_blank">View my resume</a>
-			
+
+			<p>Thank you for your interest in viewing my resume. Please <a href="mailto:powellg@wit.edu">email me</a> for more information :)</p>
+			<!-- <a href="media/George Powell - Resume.pdf" target="_blank">View my resume</a> -->
+
 		</div>
 	</section>
 
@@ -123,6 +125,6 @@
 	<script src="js/all.js"></script>
 	<script src="js/index.js"></script>
 	<script>document.body.style.backgroundColor = "#1D1D1D"</script>
-	
+
 </body>
 </html>
