--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/index.css" />
 	<link rel="icon" href="images/favicon.png" />
+
+	<base target="_blank" rel="noopener noreferrer">
 </head>
 
 <body>
@@ -17,18 +19,27 @@
 			<span id="name"></span><span class="blinking-cursor">_</span>
 		</h1>
 
-        <div id="menu">
+		<div id="menu">
 			<div id="subtext">
 				<!--Boston, Massachusetts &#10140; Houston, Texas<span id="location"></span>-->
 				<!--Tyngsboro, MA &#10140; Boston, MA &#10140; Houston, TX?-->
 			</div>
 			<hr>
-						<a class="nav" id="h" onclick="menu('home', 'h')">home</a> &nbsp;&bull;&nbsp;
-            <a class="nav" id="a" onclick="menu('about', 'a')">about me</a> &nbsp;&bull;&nbsp;
-            <a class="nav" id="b" onclick="menu('contact', 'b')">contact</a> &nbsp;&bull;&nbsp;
-            <a class="nav" id="c" onclick="menu('resume', 'c')">resume</a>
+			<a class="nav" id="h" onclick="menu('home', 'h')">home</a>
+			&nbsp;&bull;&nbsp;
+			<a class="nav" id="a" onclick="menu('about', 'a')">about me</a>
+			<span style="display: none;">
+			&nbsp;&bull;&nbsp;
+			<a class="nav" id="d" onclick="menu('projects', 'd')">projects</a>
+			</span>
+			&nbsp;&bull;&nbsp;
+			<a class="nav" id="b" onclick="menu('contact', 'b')">contact</a>
+			<span style="display: none;">
+				&nbsp;&bull;&nbsp;
+				<a class="nav" id="c" onclick="menu('resume', 'c')">resume</a>
+			</span>
 			<hr>
-        </div>
+		</div>
 
 	</div>
 
@@ -55,7 +66,7 @@
 				My name is George,
 				and I'm a Computer Science student
 				at Wentworth Institute of Technology.
-				I'm currently a Software Engineer Intern at SolBid, Inc.
+				I'm currently a Software Engineer Intern at <a href="https://www.solbid.com">SolBid, Inc</a>.
 			</p>
 			<p>
 
@@ -80,51 +91,51 @@
 			</p>
 		</div>
 
-		<!--<div id="projects">
-
-		</div>-->
-
 		<div id="contact">
 			<!-- formatted list version (bad css)
 			<ul>
-				<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">linkedIn</a></li>
-				<li>email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a></li>
-				<li>discord: <span style="background-color: #444444;">george#4665</span></li>
-			</ul>
-			<hr>
-			<ul>
-				<li><a href="https://github.com/powellgatwit" target="_blank">github</a></li>
-				<li><a href="https://www.chess.com/member/egglemonsoup" target="_blank">chess.com</a></li>
-				<li><a href="https://lichess.org/@/powellgatwit" target="_blank">lichess.org</a></li>
-				<li><a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">goodreads</a></li>
-			</ul> -->
-			email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
-			discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br>
+			<li><a href="https://linkedin.com/in/georgehpowell" target="_blank">linkedIn</a></li>
+			<li>email: <a href="mailto:powellg@wit.edu">powellg@wit.edu</a></li>
+			<li>discord: <span style="background-color: #444444;">george#4665</span></li>
+		</ul>
+		<hr>
+		<ul>
+		<li><a href="https://github.com/powellgatwit" target="_blank">github</a></li>
+		<li><a href="https://www.chess.com/member/egglemonsoup" target="_blank">chess.com</a></li>
+		<li><a href="https://lichess.org/@/powellgatwit" target="_blank">lichess.org</a></li>
+		<li><a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">goodreads</a></li>
+	</ul> -->
+	email <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
+	<!-- discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br> -->
 
-			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
-			<a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
-			<!-- <a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a>,-->
-			<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
-			<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><!--,
-			<a href="https://medium.com/@gghp" target="_blank">Medium</a>-->
-		</div>
+	<!--<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
+	<a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
+	<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a><br>
+	<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
+	<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><br>
+	<a href="https://medium.com/@gghp" target="_blank">Medium</a> -->
+	</div>
 
-		<div id="resume">
+	<div id="projects">
+		Projects go here.
+	</div>
 
-			<p>Thank you for your interest in viewing my resume. Please <a href="mailto:powellg@wit.edu">email me</a> for more information :)</p>
-			<!-- <a href="media/George Powell - Resume.pdf" target="_blank">View my resume</a> -->
+	<div id="resume">
 
-		</div>
-	</section>
+		<p>Thank you for your interest in viewing my resume. Please <a href="mailto:powellg@wit.edu">email me</a> for more information :)</p>
+		<!-- <a href="media/George Powell - Resume.pdf" target="_blank">View my resume</a> -->
 
-	<footer>
-		Designed and built by George Powell. <span id="copyr">&copy;</span><span id="copyyear"></span>
-	</footer>
+	</div>
+</section>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="js/all.js"></script>
-	<script src="js/index.js"></script>
-	<script>document.body.style.backgroundColor = "#1D1D1D"</script>
+<footer>
+	Designed and built by George Powell. <span id="copyr">&copy;</span><span id="copyyear"></span>
+</footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="js/all.js"></script>
+<script src="js/index.js"></script>
+<script>document.body.style.backgroundColor = "#1D1D1D"</script>
 
 </body>
 </html>
