--- a/index.html
+++ b/index.html
@@ -52,43 +52,49 @@
 				Wentworth Institute of Technology<br>
 				B.S. in Computer Science<br>
 				Expected Graduation: Aug. 2023<br>
-				<a href="mailto:powellg@wit.edu" target="_blank">powellg@wit.edu</a>
+				<a href="mailto:powellg@wit.edu">powellg@wit.edu</a>
 			</i></p>
-			<!--<a href="mailto:powellg@wit.edu" target="_blank">powellg@wit.edu</a><br>
-			<a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
-			<a href="https://github.com/powellgatwit" target="_blank">GitHub</a>-->
 		</div>
 
 		<div id="about">
-			<!-- professional qualifications-->
-			<!-- career aspirations -->
-			<p>
-				My name is George,
-				and I'm a Computer Science student
-				at Wentworth Institute of Technology.
-				I'm currently a Software Engineer Intern at <a href="https://www.solbid.com">SolBid, Inc</a>.
-			</p>
-			<p>
 
-			</p>
-			<!-- experience -->
+			<!-- career aspirations -->
+			<!-- introduction -->
 			<p>
-				I currently work with
-				<a href="http://ocf.net" target="_blank">Orthodox Christian Fellowship</a>
-				on their Student Leadership Board.
-				I also serve as the president of
-				the Wentworth Chess Club.
+				Hi! My name is George. I'm a Computer Science student at
+				Wentworth Institute of Technology. I like to find smart solutions to problems with data and coding.
 			</p>
-			<!-- interests -->
-			<hr>
+			<!-- professional qualifications-->
 			<p>
-				I'm currently reading
-				<i>In Praise of Slowness</i> by Carl Honore.
+				In 2022, I began working with <a href="https://www.solbid.com">SolBid, Inc</a>
+				as a Software Engineer Intern.
+				I've worked on projects ranging from
+				full-stack web development to machine learning and artificial intelligence (ML/AI).
+			</p>
+			<!-- significant personal achievements -->
+			<p>
+				In 2018, I achieved the rank of Eagle Scout. Since then, I've volunteered with
+				<a href="http://ocf.net">Orthodox Christian Fellowship</a> on the Student Leadership Board,
+				worked as a barista at Starbucks, and restarted the Wentworth Chess Club,
+				in which I currently serve as president.
+			</p>
+			<!-- fun personal details -->
+			<p>
+				Reading allows me to pursue my desire for endless learning.
+				I enjoy reading about many topics, including
+				technology, digital anthropology, personal finance,
+				business, the environment, world history, psychology, and religion.
+			</p>
+			<p>
+				Currently, I'm reading
+				<i>The Defining Decade</i> by Meg Jay, PhD.
 				I recently finished
-				<i>A Game of Thrones</i> by George R. R. Martin.
-				A book I enjoyed reading this year was
-				<i>A Man Called Ove</i> by Fredrik Backman.
+				<i>The Gurus, the Young Man, and Elder Paisios</i> by Alexis Trader.
 			</p>
+
+			<span style="font-style: italic; font-size: 0.8em">
+				last updated feb 2022
+			</span>
 		</div>
 
 		<div id="contact">
