--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 	email <a href="mailto:powellg@wit.edu">powellg@wit.edu</a><br>
 	<!-- discord: <span style="background-color: #444444; color: white;" id="discord">george#4665</span><br> -->
 
-	also <a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a><br>
-	<!-- <a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
+	also <a href="https://linkedin.com/in/georgehpowell" target="_blank">LinkedIn</a>, <a href="https://github.com/powellgatwit" target="_blank">GitHub</a><br>
+	<!--
 	<a href="https://www.chess.com/member/egglemonsoup" target="_blank">Chess.com</a><br>
 	<a href="https://lichess.org/@/powellgatwit" target="_blank">Lichess.org</a><br>
 	<a href="https://www.goodreads.com/user/show/96539354-george-powell" target="_blank">Goodreads</a><br>
