corrected about headings

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<div id="about">
-			About me
+			<h2>About me</h2>
 			<!-- introduction -->
 			<p>
 				Hi! My name is George. I'm a Computer Science student at
@@ -78,7 +78,7 @@
 				in which I currently serve as president.
 			</p>
 			<!-- fun personal details -->
-			Personal life
+			<h2>Personal</h2>
 			<p>
 				Reading allows me to pursue my desire for endless learning.
 				I enjoy reading about many topics, including
