--- a/index.html
+++ b/index.html
@@ -61,14 +61,7 @@
 			<!-- introduction -->
 			<p>
 				Hi! My name is George. I'm a Computer Science student at
-				Wentworth Institute of Technology. I like to find smart solutions to problems with data and coding.
-			</p>
-			<!-- professional qualifications-->
-			<p>
-				In 2022, I began working with <a href="https://www.solbid.com">SolBid, Inc</a>
-				as a Software Engineer Intern.
-				I've worked on projects ranging from
-				full-stack web development to machine learning and artificial intelligence (ML/AI).
+				Wentworth Institute of Technology. I love using effective communication to solve problems.
 			</p>
 			<!-- significant personal achievements -->
 			<p>
@@ -77,8 +70,15 @@
 				worked as a barista at Starbucks, and restarted the Wentworth Chess Club,
 				in which I currently serve as president.
 			</p>
+			<!-- professional qualifications-->
+			<p>
+				In 2022, I began working with <a href="https://www.solbid.com">SolBid, Inc</a>
+				as a Software Engineer Intern.
+				I've worked on projects ranging from
+				full-stack web development to machine learning and artificial intelligence (ML/AI).
+			</p>
 			<!-- fun personal details -->
-			Personal life
+			Personal
 			<p>
 				Reading allows me to pursue my desire for endless learning.
 				I enjoy reading about many topics, including
