--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 			</p>
 			<p>
 				Currently, I'm reading
+				<i>The Rise of Theodore Roosevelt</i> by Edmund Morris and
 				<i>The Defining Decade</i> by Meg Jay, PhD.
 				I recently finished
 				<i>The Gurus, the Young Man, and Elder Paisios</i> by Alexis Trader.
